# yahboom-microros-pc-setup

./: .gitattributes  .gitignore  README.md  README_zh.md
docs/: esp32_lower_computer_prep_zh.md  hardware_bringup_checklist_zh.md  learning_roadmap_zh.md  windows_isolation_zh.md
esp32_firmware/yahboom_esp32_micro_ros_car/: CMakeLists.txt  README_zh.md  sdkconfig.defaults
esp32_firmware/yahboom_esp32_micro_ros_car/main/: CMakeLists.txt  encoder.c  encoder.h  kinematics.c  kinematics.h  main.c  motor.c  motor.h  pid.c  pid.h
windows/: build_esp32_firmware.ps1  install_wsl_ubuntu22_admin.ps1  open_esp_idf_shell.ps1  run_wsl_environment_setup.ps1
wsl/: install_esp_idf_tools.sh  setup_esp32_micro_ros_sources.sh  setup_ros2_humble_pc.sh
wsl/ros2_ws_src/yahboom_pc_control/: README_zh.md  package.xml  setup.cfg  setup.py
wsl/ros2_ws_src/yahboom_pc_control/launch/: cmd_vel_test.launch.py
wsl/ros2_ws_src/yahboom_pc_control/yahboom_pc_control/: cmd_vel_publisher.py
wsl/ros2_ws_src/yahboom_robot_bringup/: README_zh.md  package.xml  setup.cfg  setup.py
wsl/ros2_ws_src/yahboom_robot_bringup/launch/: pc_bringup_udp.launch.py
wsl/scripts/: start_agent_serial.sh  start_agent_udp.sh
