<?xml version="1.0"?>
<package format="3">
  <name>yahboom_pc_control</name>
  <version>0.1.0</version>
  <description>Minimal PC-side ROS2 control nodes for Yahboom MicroROS car bring-up.</description>
  <maintainer email="user@example.com">Yahboom MicroROS PC User</maintainer>
  <license>MIT</license>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
